fixed major bugs ready for testing

--- a/credentials/gcp.yaml
+++ b/credentials/gcp.yaml
@@ -10,6 +10,15 @@
 GCP_SERVICE_ACCOUNT_KEY: "$(cat path/to/service-account.json)"
 GCP_PROJECT_ID: "your-gcp-project-id"
 
+# Parent Resource Configuration (choose one)
+# GCP_ORGANIZATION_ID: "123456789012"           # For organization-level projects
+# GCP_FOLDER_ID: "folders/123456789012"         # For folder-level projects (takes priority)
+
+# Project Management Configuration
+# GCP_PROJECT_OWNER_EMAIL: "admin@yourdomain.com"     # Project owner email
+# GCP_COMPANY_DOMAIN: "yourdomain.com"                # Company domain for auto-ownership
+# GCP_ROOT_ZONE_DOMAIN: "yourdomain.com"              # Root DNS zone domain
+
 # Option B: Individual fields (alternative)
 # GCP_PROJECT_ID: "your-gcp-project-id"
 # GCP_CLIENT_EMAIL: "service-account@project.iam.gserviceaccount.com"
